--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "crown-clothing",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:9999",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,7 +10,6 @@
     "axios": "^0.21.1",
     "express-sslify": "^1.2.0",
     "firebase": "^7.15.0",
-    "node-sass": "^7.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -45,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.56.1"
   }
 }
