--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "crwn-clothing-server",
   "version": "1.0.0",
   "engines": {
-    "node": "12.17.0",
-    "npm": "6.14.4"
+    "node": "16.18.1",
+    "npm": "8.19.2"
   },
   "scripts": {
     "client": "cd client && yarn start",
@@ -19,6 +19,7 @@
     "cors": "2.8.5",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
+    "express-sslify": "^1.2.0",
     "stripe": "6.28.0"
   },
   "devDependencies": {
